--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Gimme this App</title>
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      window.apiData = {{ .data }}
+      window.originURL = window.location.href
+      window.valid = true
+    </script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
